# optee_test

./: .gitignore  Android.mk  CMakeLists.txt
host/xtest/: CMakeLists.txt  Makefile  regression_1000.c  regression_4000.c  regression_6000.c  xtest_10000.c  xtest_4000.c
ta/: CMakeLists.txt
ta/crypt/: CMakeLists.txt  seed_rng_taf.c  ta_entry.c
ta/crypt/include/: seed_rng_taf.h  ta_crypt.h
ta/include/: ta_storage.h
ta/os_test/include/: os_test.h
ta/storage/: storage.c  ta_entry.c
ta/storage/include/: storage.h
